updated distro's README